<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/oulu"
    tools:context=".OuluActivity">
    <!--android:animateLayoutChanges="true"-->
    <!--@android:color/holo_orange_light-->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/oulu_layout_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/city_layout_text"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="right|top"
        android:orientation="vertical">

        <TextView
            android:id="@+id/oulu_layout_longer_text"
            android:layout_width="390sp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="15sp"
            android:text="@string/oulu_city_text"
            android:textColor="@android:color/holo_blue_dark"

            android:textSize="31sp" />

    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/exerciseButton1"
                android:layout_column="0"
                android:layout_margin="75sp"
                android:width="300dp"
                android:height="200dp"
                android:background="@drawable/gradient"
                android:text="@string/exercise_1" />

            <Button
                android:id="@+id/exerciseButton2"
                android:layout_column="0"
                android:layout_margin="75sp"
                android:width="300dp"
                android:height="200dp"
                android:background="@drawable/gradient"
                android:text="@string/exercise_2" />
            <!--android:background="#ff41ff40"-->

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/exerciseButton3"
                android:layout_column="0"
                android:layout_margin="75sp"
                android:width="300dp"
                android:height="200dp"
                android:background="@drawable/gradient"
                android:text="@string/exercise_3" />

            <Button
                android:id="@+id/exerciseButton4"
                android:layout_column="0"
                android:layout_margin="75sp"
                android:width="300dp"
                android:height="200dp"
                android:background="@drawable/gradient"
                android:text="@string/exercise_4" />
        </TableRow>
    </TableLayout>


</RelativeLayout>
