<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/accent_material_dark"
    android:gravity="center"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="800sp"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_green">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/exercise_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/oulu_exercise2_text"
                android:textColor="#ff004c99"
                android:textSize="30sp"
                android:textStyle="bold" />

            <FrameLayout
                android:layout_width="700sp"
                android:layout_height="fill_parent"
                android:background="@android:color/white">

                <EditText
                    android:id="@+id/postcard_message_edit_text"
                    android:layout_width="400sp"
                    android:layout_height="300sp"
                    android:hint="@string/hint_message"
                    android:inputType="textCapSentences|textMultiLine" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:orientation="vertical">

                    <FrameLayout
                        android:layout_width="100sp"
                        android:layout_height="100sp"
                        android:layout_gravity="right"
                        android:layout_margin="10sp"
                        android:background="@drawable/border"></FrameLayout>

                    <EditText
                        android:id="@+id/address_edit_text1"
                        android:layout_width="300sp"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_name"
                        android:inputType="textCapWords" />

                    <EditText
                        android:id="@+id/address_edit_text2"
                        android:layout_width="300sp"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_address"
                        android:inputType="textCapWords" />

                    <EditText
                        android:id="@+id/address_edit_text3"
                        android:layout_width="300sp"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_postal_code_and_post_office"
                        android:inputType="textCapWords" />

                    <EditText
                        android:id="@+id/address_edit_text4"
                        android:layout_width="300sp"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_land"
                        android:inputType="textCapCharacters" />

                </LinearLayout>


            </FrameLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <Button
                    android:id="@+id/cancel_button"
                    android:layout_width="50sp"
                    android:layout_height="50sp"
                    android:layout_marginRight="10sp"
                    android:background="#ff66ff66"
                    android:text="@string/cancel_button_text" />

                <ImageButton
                    android:id="@+id/info_button"
                    android:layout_width="50sp"
                    android:layout_height="50sp"
                    android:layout_marginLeft="10sp"
                    android:layout_marginRight="10sp"
                    android:layout_toRightOf="@id/cancel_button"
                    android:background="@drawable/info_button_color_changed" />

                <Button
                    android:id="@+id/check_button"
                    android:layout_width="50sp"
                    android:layout_height="50sp"
                    android:layout_marginLeft="10sp"
                    android:layout_toRightOf="@id/info_button"
                    android:background="#ff66ff66"
                    android:text="@string/check_button_text" />

            </RelativeLayout>

        </LinearLayout>

    </FrameLayout>

</LinearLayout>